tests/fail/fail-float2.mc
int main()
{
  -3.5 && 2.5; /* Float with AND? */
  return 0;
}
